; ModuleID = '/home/carl/AnghaBench/linux/drivers/i3c/extr_master.c_i3c_bus_init_addrslots.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i3c/extr_master.c_i3c_bus_init_addrslots.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i3c_bus = type { i32 }

@I3C_ADDR_SLOT_RSVD = common dso_local global i32 0, align 4
@I3C_BROADCAST_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i3c_bus*)* @i3c_bus_init_addrslots to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i3c_bus_init_addrslots(%struct.i3c_bus* %0) #0 {
  %2 = alloca %struct.i3c_bus*, align 8
  %3 = alloca i32, align 4
  store %struct.i3c_bus* %0, %struct.i3c_bus** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %12, %1
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 8
  br i1 %6, label %7, label %15

7:                                                ; preds = %4
  %8 = load %struct.i3c_bus*, %struct.i3c_bus** %2, align 8
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @I3C_ADDR_SLOT_RSVD, align 4
  %11 = call i32 @i3c_bus_set_addr_slot_status(%struct.i3c_bus* %8, i32 %9, i32 %10)
  br label %12

12:                                               ; preds = %7
  %13 = load i32, i32* %3, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %3, align 4
  br label %4

15:                                               ; preds = %4
  %16 = load %struct.i3c_bus*, %struct.i3c_bus** %2, align 8
  %17 = load i32, i32* @I3C_BROADCAST_ADDR, align 4
  %18 = load i32, i32* @I3C_ADDR_SLOT_RSVD, align 4
  %19 = call i32 @i3c_bus_set_addr_slot_status(%struct.i3c_bus* %16, i32 %17, i32 %18)
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %31, %15
  %21 = load i32, i32* %3, align 4
  %22 = icmp slt i32 %21, 7
  br i1 %22, label %23, label %34

23:                                               ; preds = %20
  %24 = load %struct.i3c_bus*, %struct.i3c_bus** %2, align 8
  %25 = load i32, i32* @I3C_BROADCAST_ADDR, align 4
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @BIT(i32 %26)
  %28 = xor i32 %25, %27
  %29 = load i32, i32* @I3C_ADDR_SLOT_RSVD, align 4
  %30 = call i32 @i3c_bus_set_addr_slot_status(%struct.i3c_bus* %24, i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %23
  %32 = load i32, i32* %3, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %3, align 4
  br label %20

34:                                               ; preds = %20
  ret void
}

declare dso_local i32 @i3c_bus_set_addr_slot_status(%struct.i3c_bus*, i32, i32) #1

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
